@@ -278,16 +278,15 @@ dependencies {
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.2'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
     testImplementation group: 'org.testfx', name: 'testfx-junit5', version: '4.0.18'
-    // TODO openjfx-monocle is no longer updated and chances are openjfx-monocle doesn't work with latest OpenJFX
-    // https://github.com/TestFX/Monocle/issues/79
-    testImplementation group: 'org.testfx', name: 'openjfx-monocle', version: 'jdk-12.0.1+2'
-    constraints {
-        implementation('org.openjfx:javafx-base:22')
-        implementation('org.openjfx:javafx-controls:22')
-        implementation('org.openjfx:javafx-graphics:22') {
-            because 'Monocle uses 12.0.1+2 that does not support Mac`s ARM'
-        }
-    }
+    // See https://github.com/TestFX/Monocle for supported LTS releases
+    testImplementation group: 'org.testfx', name: 'openjfx-monocle', version: '17.0.10' // FJE
+//    constraints {
+//        implementation('org.openjfx:javafx-base:22')
+//        implementation('org.openjfx:javafx-controls:22')
+//        implementation('org.openjfx:javafx-graphics:22') {
+//            because 'Monocle uses 12.0.1+2 that does not support Mac`s ARM'
+//        }
+//    }
 
     testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version:'2.9.1'
     spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.13.0'
@@ -356,11 +355,11 @@ runtime {
     ]
 
     // We support Mac/Win/Linux x86-64, Mac/Linux aarch64, and Win x86-32
-    targetPlatform('linux-x64',     "$projectDir/jre/linux/jre_x64")
-    targetPlatform('linux-aarch64', "$projectDir/jre/linux/jre_aarch64")
-    targetPlatform('windows-x64',   "$projectDir/jre/windows/jre_x64")
-    targetPlatform('windows-x32',   "$projectDir/jre/windows/jre_x32")
-    targetPlatform('mac-x64',       "$projectDir/jre/mac/jre_x64/Contents/Home")
+    //targetPlatform('linux-x64',     "$projectDir/jre/linux/jre_x64")
+    //targetPlatform('linux-aarch64', "$projectDir/jre/linux/jre_aarch64")
+    //targetPlatform('windows-x64',   "$projectDir/jre/windows/jre_x64")
+    //targetPlatform('windows-x32',   "$projectDir/jre/windows/jre_x32")
+    //targetPlatform('mac-x64',       "$projectDir/jre/mac/jre_x64/Contents/Home")
     targetPlatform('mac-aarch64',   "$projectDir/jre/mac/jre_aarch64/Contents/Home")
 
     // Use the jpackage tool that comes with Java to build native installers
@@ -867,7 +866,10 @@ allprojects {
 
                 // Needed to fix issue with testfx test crashing due to issue with modularity of whole program. Slightly related issue. https://github.com/TestFX/TestFX/issues/638
                 '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+                '--add-exports', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
                 '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+                '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
         ]
     }
     tasks.withType(JavaCompile) {
